# atlas-economic-tool

./: .gitignore  README.md  angular.json  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  updater.rs
src-tauri/src/app/: database_access.rs  mod.rs  state.rs
src-tauri/src/app/commands/: create_customer.rs  create_invoice.rs  create_product.rs  fetch_customer.rs  fetch_product.rs  find_customer.rs  load_documents.rs  load_invoices.rs  mod.rs  sync_data.rs  update_customer.rs
src-tauri/src/app/models/: create_customer_request.rs  customer.rs  customer_reference.rs  document.rs  document_customer.rs  document_line.rs  document_product.rs  documents.rs  invoice.rs  invoice_customer.rs  invoice_line.rs  invoice_product.rs  mod.rs  new_customer.rs  new_invoice.rs  new_invoice_line.rs  new_invoice_recipient.rs  new_product.rs  product.rs  tokens.rs
src-tauri/src/app/state/: mod.rs  settings.rs
src-tauri/src/core/: mod.rs  xml_helper.rs
src-tauri/src/core/models/: credit_note.rs  customer.rs  document.rs  document_customer.rs  document_line.rs  documents.rs  invoice.rs  mod.rs  product.rs  read_error.rs
src-tauri/src/core/services/: data_reader.rs  document_reader.rs  mod.rs
src-tauri/src/core/types/: customer.rs  document.rs  invoice.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/entities/: customer.rs  mod.rs  product.rs
src-tauri/src/persistence/: connection.rs  customer.rs  mod.rs  product.rs
(+253 files in other folders)
