[package]
name = "atlas-economic-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jonas Bruun Plesner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "atlas_economic_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
futures = "0.3"
rfd = "0.15"
rusqlite = { version = "0.37", features = ["bundled"] }
tauri = { version = "2.8", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2.3"
quick-xml = { version = "0.38.3", features = ["serialize"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

